--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <img src="Mark-Knopfler.jpg"/width="300" height"200"><br/>
 <iframe width="560" height="315"  src="https://www.youtube.com/embed/cJwJ11-pmxg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen"></iframe>
 <H3><span style="color:red">Slash</h3><br/>
-<img src="Slash.jpg"/width="300" height"200"><br/>
+<img src="slash.jpg"/width="300" height"200"><br/>
 <iframe width="560" height="315"  src="https://www.youtube.com/embed/9lT37stphqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen"></iframe>
 <H3><span style="color:red">Carlos santana</h3><br/>
 <img src="6.jpg"/width="300" height"200"><br/>
